k8s/applications/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
spec:
  selector:
    matchLabels:
      app: audiobookshelf
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: audiobookshelf
          image: advplyr/audiobookshelf:2.35.1
          ports:
            - name: ingress
              containerPort: 80
          volumeMounts:
            - name: audiobookshelf
              mountPath: /metadata
              subPath: metadata
            - name: audiobookshelf
              mountPath: /config
              subPath: config
            - name: libraries
              mountPath: /audiobooks
              subPath: audiobooks
            - name: libraries
              mountPath: /podcasts
              subPath: podcasts
      volumes:
        - name: audiobookshelf
          persistentVolumeClaim:
            claimName: audiobookshelf
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
      resources:
        limits:
          memory: 1Gi
        requests:
          cpu: 10m
          memory: 1Gi
