k8s/applications/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
